<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#999999"
    android:padding="10dp"
    tools:context=".view.ConsultaLivros">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/font"
        android:text="@string/lista_de_livros"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteY="24dp" />

    <TextView
        android:id="@+id/emprestados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/font"
        android:text="@string/lista_emp_text"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="18sp" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emprestados"
        android:layout_marginTop="15dp"
        android:background="@drawable/search_design"
        android:focusableInTouchMode="true"
        android:theme="@style/search"
        app:iconifiedByDefault="false"
        app:queryHint="@string/pesquisar"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="82dp">

    </androidx.appcompat.widget.SearchView>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_id"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        tools:layout_editor_absoluteY="130dp" />

    <LinearLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">
    </LinearLayout>
</RelativeLayout>